edit configs for prod